feat: update configuration files for local development and add polyfill for sockjs-client

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>WatchParty</title>
+  <script>
+    // Polyfill: sockjs-client expects Node's `global` to exist
+    var global = globalThis;
+  </script>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
